--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="about_author">Autor:</string>
-    <string name="about_blizzard">Ventisca</string>
+    <string name="about_version">Versión:</string>
+    <string name="about_sunny">Soleado</string>
     <string name="about_cloudy">Nublado</string>
-    <string name="about_cloudy_night">Noche despejada</string>
+    <string name="about_overcast">Cubierto</string>
+    <string name="about_fog">Nebla</string>
+    <string name="about_rainstorm">Lluvias torrenciales</string>
+    <string name="about_t_storms">Tormentas</string>
+    <string name="about_rain_showers">Chubascos</string>
+    <string name="about_heavy_rain">Lluvia fuerte</string>
+    <string name="about_moderate_rain">Lluvia</string>
+    <string name="about_light_rain">Lluvia suave</string>
+    <string name="about_sleet">Aguanieve</string>
+    <string name="about_blizzard">Ventisca</string>
+    <string name="about_snow_showers">Chubascos de nievehaz</string>
+    <string name="about_heavy_snow">Fuerte nevada</string>
+    <string name="about_moderate_snow">Nieve</string>
+    <string name="about_light_snow">Suave nevada</string>
     <string name="about_dust">Polvo</string>
-    <string name="about_fog">Niebla</string>
+    <string name="about_hailstone">Granizo</string>
+    <string name="about_haze">Neblina</string>
     <string name="about_for_translators">Traducción:</string>
     <string name="about_for_translators_text">Si deseas ayudar con la traducción de esta aplicación a tu idioma, visita mi página de github (usando el botón de arriba) para ver todos los recursos</string>
-    <string name="about_hailstone">Granizo</string>
-    <string name="about_heavy_snow">Temporal de nieve</string>
-    <string name="about_light_rain">Ligera lluvia</string>
-    <string name="about_light_snow">Ligera nevada</string>
-    <string name="about_overcast">Cubierto</string>
-    <string name="about_rain">Lluvia</string>
-    <string name="about_rainstorm">Temporal de lluvia</string>
-    <string name="about_showers">Chubascos</string>
-    <string name="about_sleet">Aguanieve</string>
-    <string name="about_snow">Nieve</string>
     <string name="about_social">Enlaces:</string>
-    <string name="about_sunny">Soleado</string>
-    <string name="about_sunny_night">Noche calurosa</string>
-    <string name="about_t_storms">Tormentas</string>
-    <string name="about_version">Versión:</string>
     <string name="animation_preview">Vista previa de animaciones</string>
     <string name="app_name">Tiempo BZ</string>
+    <string name="applying_theme">Aplicando tema\u2026</string>
     <string name="btn_add_location">Añadir</string>
+    <string name="btn_apply_theme">Aplicar tema</string>
     <string name="btn_delete_location">Eliminar</string>
     <string name="cancel">Cancelar</string>
     <string name="clear_miui_data">Borrar datos de MIUI Weather</string>
-    <string name="clear_miui_data_summary">Borra la base de datos del proveedor de MIUI Weather</string>
     <string name="clear_miui_data_dialog">Eliminar MIUI Weather</string>
-    <string name="clear_miui_data_dialog_text">Base de datos del proveedor de MIUI Weather eliminada!</string>
     <string name="clear_miui_data_dialog_ask">Seguro que desea borrar la base de datos del proveedor de MIUI Weather?</string>
+    <string name="clear_miui_data_dialog_text">Base de datos del proveedor de MIUI Weather eliminada!</string>
+    <string name="clear_miui_data_summary">Borra la base de datos del proveedor de MIUI Weather</string>
     <string name="close">Salir</string>
     <string name="conf_add_widget">Añadir Widget</string>
     <string name="conf_dark_skin">Tema oscuro</string>
@@ -53,10 +56,10 @@
     <string name="donations_flattr">Flattr</string>
     <string name="donations_flattr_description">¡Flattr se queda el 10% como cuota mensual!</string>
     <string name="donations_google_android_market">Google Play Store</string>
-    <string name="donations_google_android_market_not_supported_title">No se admiten donaciones In-App</string>
-    <string name="donations_google_android_market_not_supported">No se admiten donaciones In-App. ¿Está Google Play Store instalado correctamente?</string>
     <string name="donations_google_android_market_description">¡Google se queda el 30% de todas las donaciones!</string>
     <string name="donations_google_android_market_donate_button">¡Donar!</string>
+    <string name="donations_google_android_market_not_supported">No se admiten donaciones In-App. ¿Está Google Play Store instalado correctamente?</string>
+    <string name="donations_google_android_market_not_supported_title">No se admiten donaciones In-App</string>
     <string name="donations_google_android_market_text">¿Cuánto?</string>
     <string name="donations_paypal">PayPal</string>
     <string name="donations_yandex">Yandex.Money</string>
@@ -89,9 +92,9 @@
     <string name="foreca_mostly_clear_pos_ts_wet_snow">Posibles tormentas y aguanieve</string>
     <string name="foreca_mostly_clear_pos_wet_snow">Posible aguanieve</string>
     <string name="foreca_overcast">Cubierto</string>
-    <string name="foreca_overcast_l_rain">Ligera lluvia</string>
-    <string name="foreca_overcast_l_snow">Ligera nevada</string>
-    <string name="foreca_overcast_l_wet_snow">Ligera aguanieve</string>
+    <string name="foreca_overcast_l_rain">Lluvia suave</string>
+    <string name="foreca_overcast_l_snow">Suave nevada</string>
+    <string name="foreca_overcast_l_wet_snow">Suave aguanieve</string>
     <string name="foreca_overcast_rain">Lluvia</string>
     <string name="foreca_overcast_showers">Chubascos</string>
     <string name="foreca_overcast_snow">Nieve</string>
@@ -102,9 +105,9 @@
     <string name="foreca_overcast_wet_snow">Aguanieve</string>
     <string name="foreca_overcast_wet_snow_showers">Chubascos de aguanieve</string>
     <string name="foreca_partly_cloudy">Parcialmente nublado</string>
-    <string name="foreca_partly_cloudy_l_rain">Ligera lluvia</string>
-    <string name="foreca_partly_cloudy_l_snow">Ligera nevada</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Ligera aguanieve</string>
+    <string name="foreca_partly_cloudy_l_rain">Lluvia suave</string>
+    <string name="foreca_partly_cloudy_l_snow">Suave nevada</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Suave aguanieve</string>
     <string name="foreca_partly_cloudy_pos_ts_rain">Posibles tormentas y lluvia</string>
     <string name="foreca_partly_cloudy_pos_ts_snow">Posibles tormentas y nieve</string>
     <string name="foreca_partly_cloudy_pos_ts_wet_snow">Posibles tormentas y aguanieve</string>
@@ -123,11 +126,14 @@
     <string name="location_search">Buscar ciudades</string>
     <string name="main_screen_text_color_summary">El color del texto de la pantalla principal</string>
     <string name="menu">Menú</string>
+    <string name="menu_delete_theme">Borrar tema</string>
     <string name="menu_hourly">Ampliado</string>
+    <string name="menu_import">Importar tema desde la tarjeta SD</string>
     <string name="menu_indices">Estilo de vida</string>
     <string name="menu_locations">Ciudades</string>
     <string name="menu_moon_phases">Fases lunares</string>
     <string name="menu_settings">Configuración</string>
+    <string name="menu_themes">Temas</string>
     <string name="menu_trend">Tendencia</string>
     <string name="menu_update">Actualizar</string>
     <string name="moon_age">Edad %s día(s)</string>
@@ -178,6 +184,7 @@
     <string name="settings_category_update_sum">Configurar las actualizaciones del clima y de la aplicación</string>
     <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Configurar el aspecto y acciones de los widgets</string>
+    <string name="settings_citydb_provider">Proveedor de ciudades</string>
     <string name="settings_click_actions">Acciones al tocar</string>
     <string name="settings_check_updates_summary">Buscar actualizaciones al iniciar la aplicación</string>
     <string name="settings_check_updates_title">Buscar actualizaciones</string>
@@ -246,6 +253,15 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Color del texto</string>
+    <string name="theme_author">"Autor: "</string>
+    <string name="theme_date">"Fecha: "</string>
+    <string name="theme_import_dialog_title">Elige un tema para importar</string>
+    <string name="theme_import_no_filemanager">Por favor, instala un gestor de archivos.</string>
+    <string name="theme_import_not_theme">No es un archivo válido!</string>
+    <string name="theme_version">"Versión: "</string>
+    <string name="themes_temperature_icons">Iconos de temperatura</string>
+    <string name="themes_weather_animation">Animación del clima</string>
+    <string name="themes_weather_icons">Iconos del clima</string>
     <string name="updating">Actualizando\u2026</string>
     <string name="upgrade">Actualizar</string>
     <string name="visibility_units">Unidad de visibilidad</string>
