--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -25,7 +25,9 @@
     <string name="about_version">Sürüm:</string>
     <string name="animation_preview">Animasyonları izle</string>
     <string name="app_name">Weather BZ</string>
+	<string name="applying_theme">Tema uygulanıyor\u2026</string>
     <string name="btn_add_location">Konum ekle</string>
+	<string name="btn_apply_theme">Temayı uygula</string> 
     <string name="btn_delete_location">Konumu sil</string>
     <string name="cancel">İptal</string>
     <string name="clear_miui_data">MIUI verilerini sil</string>
@@ -123,11 +125,14 @@
     <string name="location_search">Konumu ara</string>
     <string name="main_screen_text_color_summary">Ana ekran yazı renkleri</string>
     <string name="menu">Menü</string>
+	<string name="menu_delete_theme">Temayı sil</string>
     <string name="menu_hourly">Saatlik</string>
+	<string name="menu_import">Temayı hafıza biriminden yükle</string>
     <string name="menu_indices">Yaşam Stili</string>
     <string name="menu_locations">Konumlar</string>
     <string name="menu_moon_phases">Ay Evreleri</string>
     <string name="menu_settings">Ayarlar</string>
+	<string name="menu_themes">Temalar</string> 
     <string name="menu_trend">Trend</string>
     <string name="menu_update">Güncelle</string>
     <string name="moon_age"> %s gün</string>
@@ -178,6 +183,7 @@
     <string name="settings_category_update_sum">Otomatik güncelleme ayarları</string>
     <string name="settings_category_widgets">Widget</string>
     <string name="settings_category_widgets_sum">Widget görünüm ve tıklama eylemleri</string>
+	<string name="settings_citydb_provider">Şehir deposu</string>
     <string name="settings_click_actions">Tıklama eylemleri</string>
     <string name="settings_check_updates_summary">uygulama başlayınca güncellemeleri kontrol eder</string>
     <string name="settings_check_updates_title">Güncelleme kontrolü</string>
@@ -246,7 +252,16 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Yazı rengi</string>
-    <string name="updating">Güncelleniyor\u2026</string>
+    <string name="theme_author">"Author: "</string>
+    <string name="theme_date">"Date: "</string>
+    <string name="theme_import_dialog_title">İçe aktarılacak temayı seçin</string>
+    <string name="theme_import_no_filemanager">Lütfen dosya yöneticisi yükleyin!</string>
+    <string name="theme_import_not_theme">Tema dosyası değil!</string>
+    <string name="theme_version">"Sürüm: "</string>
+    <string name="themes_temperature_icons">Sıcaklık simgeleri</string>
+    <string name="themes_weather_animation">Hava durumu animasyonları</string>
+    <string name="themes_weather_icons">Hava durumu simgeleri</string>
+    <string name="updating">Güncelleniyor\u2026</string> 
     <string name="upgrade">Güncelle</string>
     <string name="visibility_units">Görüş mesafesi birimleri</string>
     <string name="visibility_units_km">" km"</string>
