--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -179,18 +179,18 @@
     <string name="settings_category_network">Ağ ayarları</string>
     <string name="settings_category_notification">Bildirimler</string>
     <string name="settings_category_notification_sum">Hava durumu bildirim ayarları</string>
-    <string name="settings_category_update">Güncelle</string>
+    <string name="settings_category_update">Güncelleme</string>
     <string name="settings_category_update_sum">Otomatik güncelleme ayarları</string>
     <string name="settings_category_widgets">Widget</string>
     <string name="settings_category_widgets_sum">Widget görünüm ve tıklama eylemleri</string>
-	<string name="settings_citydb_provider">Şehir deposu</string>
+	<string name="settings_citydb_provider">Şehir Sağlayıcısı</string>
     <string name="settings_click_actions">Tıklama eylemleri</string>
     <string name="settings_check_updates_summary">uygulama başlayınca güncellemeleri kontrol eder</string>
     <string name="settings_check_updates_title">Güncelleme kontrolü</string>
     <string name="settings_hide_bottom_bar_title">Üst barı gizle</string>
     <string name="settings_hide_bottom_bar_summary">Tuşlarla alt çubuğunu gizlemek için ekrana dokunun</string>
     <string name="settings_miui_support_summary">MIUI widget desteğini açar</string>
-    <string name="settings_miui_support_title">MIUI widget desteğini</string>
+    <string name="settings_miui_support_title">MIUI widget desteği</string>
     <string name="settings_miui_v5_summary">MIUI v5 ROM kullanıyorsanız açın</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
     <string name="settings_moon_phases_title">Ay evreleri</string>
@@ -198,7 +198,7 @@
     <string name="settings_notification_summary">Durum çubuğu sembol renklerini değiştirebilirsiniz</string>
     <string name="settings_notification_text_color_summary">Bildirimlerin yazı ve simge renkleri</string>
     <string name="settings_notification_title">Bildirimleri göster</string>
-    <string name="settings_notification_type">Bildirimler türü</string>
+    <string name="settings_notification_type">Bildirim türü</string>
     <string name="settings_show_info_summary">Arabirim öğelerini gösterme veya gizleme</string>
     <string name="settings_show_info_title">Bilgileri göster</string>
     <string name="settings_show_weather_icons_summary">3-günlük tahminlerde hava durumu simgelerini göster</string>
@@ -252,8 +252,8 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Yazı rengi</string>
-    <string name="theme_author">"Author: "</string>
-    <string name="theme_date">"Date: "</string>
+    <string name="theme_author">"Yazar: "</string>
+    <string name="theme_date">"Tarih: "</string>
     <string name="theme_import_dialog_title">İçe aktarılacak temayı seçin</string>
     <string name="theme_import_no_filemanager">Lütfen dosya yöneticisi yükleyin!</string>
     <string name="theme_import_not_theme">Tema dosyası değil!</string>
