--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -24,8 +24,10 @@
     <string name="about_t_storms">Bouřky</string>
     <string name="about_version">Verze:</string>
     <string name="animation_preview">Náhled animací</string>
+    <string name="applying_theme">Nastavování téma\u2026</string>
     <string name="app_name">Počasí</string>
     <string name="btn_add_location">Přidat</string>
+    <string name="btn_apply_theme">Použít</string>
     <string name="btn_delete_location">Vymazat</string>
     <string name="cancel">Zrušit</string>
     <string name="changelog">Seznam změn</string>
@@ -123,11 +125,14 @@
     <string name="location_search">Vyhledat Město</string>
     <string name="main_screen_text_color_summary">Barva textu na hlavní obrazovce</string>
     <string name="menu">Menu</string>
+    <string name="menu_delete_theme">Vymazat téma</string>
     <string name="menu_hourly">Hodinová</string>	
+    <string name="menu_import">Importovat z SD karty</string>
     <string name="menu_indices">Životní styl</string>
     <string name="menu_locations">Města</string>
     <string name="menu_moon_phases">Fáze měsíce</string>
     <string name="menu_settings">Nastavení</string>
+    <string name="menu_themes">Témata</string>
     <string name="menu_trend">Vývoj</string>	
     <string name="menu_update">Aktualizovat</string>
     <string name="moon_age">Věk: %s dní</string>
@@ -144,14 +149,14 @@
     <string name="moon_waxinggibbous">Dorůstající měsíc</string>
     <string name="network_error">Nelze se připojit na server</string>
     <string name="new_version">Nová verze</string> 
+    <string name="not_now">Později</string> 
     <string name="no_provider">"Určení polohy selhalo. Zvolte město manuálně"</string>
     <string name="no_weather_provider">Žádný zdroj předpovědi</string> 
-    <string name="not_now">Později</string> 
     <string name="ok">OK</string>
-    <string name="press_color_to_apply">Zvolte barvu</string>
     <string name="pressure_units">Jednotka tlaku</string>
     <string name="pressure_units_mb">" hPa"</string>
     <string name="pressure_units_mmhg">" mm.Hg"</string>
+    <string name="press_color_to_apply">Zvolte barvu</string>
     <string name="quiet_hours_enabled">Povolit čas ticha</string>
     <string name="quiet_hours_enabled_off">Aktualizace fungují jako obyčejně</string>
     <string name="quiet_hours_enabled_on">Čas ticha povolen</string>
@@ -166,9 +171,9 @@
     <string name="settings_animation_type">Typ animací</string>
     <string name="settings_category_animation">Nastavení animací</string>
     <string name="settings_category_animation_sum">Nastavení animací počasí a stahování dat</string>
-    <string name="settings_category_app_update">Aktualizace aplikace</string>
     <string name="settings_category_appearance">Přizpůsobení</string>
     <string name="settings_category_appearance_sum">Přizpůsobení nastavení (jednotka teploty, barva textu atd.)</string>
+    <string name="settings_category_app_update">Aktualizace aplikace</string>
     <string name="settings_category_forecast_update">Aktualizace předpovědi</string>
     <string name="settings_category_miui">MIUI ROM</string>
     <string name="settings_category_miui_sum">Podpora MIUI (aktivovat, vyčistit data atd.)</string>
@@ -181,9 +186,10 @@
     <string name="settings_category_widgets_sum">Přizpůsobení widgetu a akce dotyku</string>
     <string name="settings_check_updates_summary">Kontrolovat aktualizace při spuštění</string>
     <string name="settings_check_updates_title">Kontrola aktualizací</string>
+    <string name="settings_citydb_provider">Databáze měst</string>
     <string name="settings_click_actions">Přizpůsobení widgetu</string>
-    <string name="settings_hide_bottom_bar_title">Skrýt spodní lištu</string>
     <string name="settings_hide_bottom_bar_summary">Dotkněte se displeje pro skrytí spodní lišty s tlačítky</string>
+    <string name="settings_hide_bottom_bar_title">Skrýt spodní lištu</string>
     <string name="settings_miui_support_summary">Povolte pro podporu widgetu počasí MIUI</string>
     <string name="settings_miui_support_title">MIUI widget</string>
     <string name="settings_miui_v5_summary">Povolte pokud používáte MIUI v5</string>
@@ -246,6 +252,15 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Barva textu</string>
+    <string name="themes_temperature_icons">Ikony teploty</string>
+    <string name="themes_weather_animation">Animace počasí</string>
+    <string name="themes_weather_icons">Ikony počasí</string>
+    <string name="theme_author">"Autor: "</string>
+    <string name="theme_date">"Datum: "</string>
+    <string name="theme_import_dialog_title">Vyberte téma</string>
+    <string name="theme_import_not_theme">Neplatný soubor!</string>
+    <string name="theme_import_no_filemanager">Nainstalujte Správce souborů.</string>
+    <string name="theme_version">"Verze: "</string>
     <string name="updating">Aktualizace...</string>
     <string name="upgrade">Aktualizovat</string>
     <string name="visibility_units">Jednotka viditelnosti</string>
@@ -301,16 +316,16 @@
     <string name="wind_w">Z</string>
     <string name="wind_wnw">Z-SZ</string>
     <string name="wind_wsw">Z-JZ</string>
-    <string name="zodiac_aries">Baran</string>
-    <string name="zodiac_taurus">Býk</string>
-    <string name="zodiac_gemini">Blíženci</string>
-    <string name="zodiac_cancer">Rak</string>
-    <string name="zodiac_leo">Lev</string>
-    <string name="zodiac_virgo">Panna</string>
-    <string name="zodiac_libra">Váhy</string>
-    <string name="zodiac_scorpio">Štír</string>
-    <string name="zodiac_sagittarius">Střelec</string>
-    <string name="zodiac_capricorn">Kozoroh</string>
     <string name="zodiac_aquarius">Vodnář</string>
+    <string name="zodiac_aries">Baran</string>
+    <string name="zodiac_cancer">Rak</string>
+    <string name="zodiac_capricorn">Kozoroh</string>
+    <string name="zodiac_gemini">Blíženci</string>
+    <string name="zodiac_leo">Lev</string>
+    <string name="zodiac_libra">Váhy</string>
     <string name="zodiac_pisces">Ryby</string>
+    <string name="zodiac_sagittarius">Střelec</string>
+    <string name="zodiac_scorpio">Štír</string>
+    <string name="zodiac_taurus">Býk</string>
+    <string name="zodiac_virgo">Panna</string>
 </resources>
