--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -124,13 +124,17 @@ Naprawdę to doceniam!"</string>
     <string name="location_search">Wyszukaj lokalizacje</string>
     <string name="main_screen_text_color_summary">Kolor tekstu informacji na głównym ekranie</string>
     <string name="menu">Menu</string>
+    <string name="menu_delete_theme">Usuń motyw</string>
     <string name="menu_hourly">Godzinowa</string>
-    <string name="menu_indices">Indekx</string>
+    <string name="menu_import">Wczytaj motyw z SD</string>
+    <string name="menu_indices">Horoskop</string>
     <string name="menu_locations">Lokalizacje</string>
     <string name="menu_moon_phases">Fazy księżyca</string>
     <string name="menu_settings">Ustawienia</string>
+    <string name="menu_themes">Motywy</string>
     <string name="menu_trend">Trendy</string>
     <string name="menu_update">Odśwież</string>
+    <string name="moon_age">Czas fazy %s dni</string>
     <string name="moon_newmoon">Nów</string>
     <string name="moon_waxingcrescent">Powiększający się sierp</string>
     <string name="moon_firstquarter">Pierwsza kwadra</string>
@@ -141,7 +145,7 @@ Naprawdę to doceniam!"</string>
     <string name="moon_waningcrescent">Zmniejszający się sierp</string>
     <string name="moon_current_view">%s</string>
     <string name="moon_illuminated">Oświetlony</string>
-    <string name="moon_since">Начиная с</string>
+    <string name="moon_since">Od</string>
     <string name="network_error">Połączenie z serwerem chwilowo niedostępne</string>
     <string name="new_version">Nowa wersja</string>
     <string name="no_provider">"Geolokalizacja nieudana
@@ -179,9 +183,12 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_category_update_sum">Aktualizacje prognozy pogody</string>
     <string name="settings_category_widgets">Widżety</string>
     <string name="settings_category_widgets_sum">Wygląd widżetów i akcje na kliknięcia</string>
-    <string name="settings_check_updates_summary">Sprawdź aktualizacje aplikacji przy uruchamianiu</string>
-    <string name="settings_check_updates_title">Sprawdzaj aktualizacje</string>
+    <string name="settings_citydb_provider">Miasta</string>
     <string name="settings_click_actions">Akcje kliknięcia</string>
+    <string name="settings_check_updates_summary">Sprawdź aktualizacje aplikacji przy uruchamianiu</string>
+    <string name="settings_check_updates_title">Sprawdjzaj aktualizacje</string>
+    <string name="settings_hide_bottom_bar_title">Ukryj dolny pasek</string>
+    <string name="settings_hide_bottom_bar_summary">Dotknij ekranu by ukryć dolny pasek menu</string>
     <string name="settings_miui_support_summary">Włącz wsparcie dla natywnych widżetów MIUI</string>
     <string name="settings_miui_support_title">Widżety MIUI</string>
     <string name="settings_miui_v5_summary">Kompatybilność z systemem MIUI v5</string>
@@ -245,6 +252,15 @@ Wybierz lokalizację ręcznie"</string>
     <string name="temperature_units_c">Celsjusz</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Kolor tekstu</string>
+    <string name="theme_author">"Autor: "</string>
+    <string name="theme_date">"Data: "</string>
+    <string name="theme_import_dialog_title">Wybierz motyw do wczytania</string>
+    <string name="theme_import_no_filemanager">Zainstaluj menedżer plików.</string>
+    <string name="theme_import_not_theme">Plik nie jest motywem!</string>
+    <string name="theme_version">"Wersja: "</string>
+    <string name="themes_temperature_icons">Ikony temperatury</string>
+    <string name="themes_weather_animation">Animacje pogody</string>
+    <string name="themes_weather_icons">Ikony pogody</string>
     <string name="updating">Odświeżanie…</string>
     <string name="upgrade">Aktualizuj</string>
     <string name="visibility_units">Jednostki widoczności</string>
@@ -300,4 +316,16 @@ Wybierz lokalizację ręcznie"</string>
     <string name="wind_w">W</string>
     <string name="wind_wnw">WNW</string>
     <string name="wind_wsw">WSW</string>
+    <string name="zodiac_aries">Baran</string>
+    <string name="zodiac_taurus">Byk</string>
+    <string name="zodiac_gemini">Bliźnięta</string>
+    <string name="zodiac_cancer">Rak</string>
+    <string name="zodiac_leo">Lew</string>
+    <string name="zodiac_virgo">Panna</string>
+    <string name="zodiac_libra">Waga</string>
+    <string name="zodiac_scorpio">Skorpion</string>
+    <string name="zodiac_sagittarius">Strzelec</string>
+    <string name="zodiac_capricorn">Koziorożec</string>
+    <string name="zodiac_aquarius">Wodnik</string>
+    <string name="zodiac_pisces">Ryby</string>
 </resources>
