--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1,44 +1,47 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ga_trackingId">UA-38673998-1</string>
     <string name="donations_paypal_user">az.burgerz@gmail.com</string>
     <string name="donations_paypal_currency_code">USD</string>
     <string name="donations__paypal_item_name">InApp Donation</string>
     <string name="about_author">作者:</string>
-    <string name="about_blizzard">暴風雪</string>
-    <string name="about_cloudy">多雲</string>
-    <string name="about_cloudy_night">多雲的夜晚</string>
-    <string name="about_dust">沙塵</string>
-    <string name="about_fog">霧</string>
-    <string name="about_for_translators">翻譯人員:</string>
-    <string name="about_for_translators_text">如果你想幫助這個應用程序翻譯成您的語言，只要進入我的github(使用上面的按鈕) 來查看所有資源</string>
-    <string name="about_hailstone">冰雹</string>
-    <string name="about_heavy_snow">雪</string>
-    <string name="about_light_rain">細雨</string>
-    <string name="about_light_snow">小雪</string>
-    <string name="about_overcast">陰天的</string>
-    <string name="about_rain">下雨</string>
-    <string name="about_rainstorm">暴風雨</string>
-    <string name="about_showers">陣雨</string>
-    <string name="about_sleet">雨雪</string>
-    <string name="about_snow">下雪</string>
-    <string name="about_social">Social links:</string>
-    <string name="about_sunny">晴朗</string>
-    <string name="about_sunny_night">晴朗的夜晚</string>
-    <string name="about_t_storms">T-storms</string>
     <string name="about_version">版本:</string>
+    <string name="about_sunny">晴朗</string>
+    <string name="about_cloudy">多雲</string>
+    <string name="about_overcast">陰天的</string>
+    <string name="about_fog">霧</string>
+    <string name="about_rainstorm">暴風雨</string>
+    <string name="about_t_storms">雷雨</string>
+    <string name="about_rain_showers">陣雨</string>
+    <string name="about_heavy_rain">大雨</string>
+    <string name="about_moderate_rain">中雨</string>
+    <string name="about_light_rain">小雨</string>
+    <string name="about_sleet">雨雪</string>
+    <string name="about_blizzard">暴風雪</string>
+    <string name="about_snow_showers">陣雪</string>
+    <string name="about_heavy_snow">大雪</string>
+    <string name="about_moderate_snow">中雪</string>
+    <string name="about_light_snow">小雪</string>
+    <string name="about_dust">沙塵</string>
+    <string name="about_hailstone">冰雹</string>
+    <string name="about_haze">陰霾</string>
+    <string name="about_for_translators">翻譯人員:</string>
+    <string name="about_for_translators_text">如果你想幫助這個程式翻譯成您的語言，只要進入我的Github(使用上面的按鈕)及感謝道奇兔的繁化</string>
+    <string name="about_social">社群連結:</string>
     <string name="animation_preview">預覽動畫</string>
     <string name="app_name">Weather BZ</string>
+    <string name="applying_theme">正在套用主題…</string>
     <string name="btn_add_location">新增位置</string>
+    <string name="btn_apply_theme">套用主題</string>
     <string name="btn_delete_location">刪除位置</string>
     <string name="cancel">取消</string>
     <string name="clear_miui_data">清除MIUI天氣資料</string>
     <string name="clear_miui_data_dialog">清除MIUI天氣</string>
-    <string name="clear_miui_data_dialog_ask">清除MIUI天氣供應商數據庫中的資料?</string>
-    <string name="clear_miui_data_dialog_text">MIUI天氣提供商數據庫已清除!</string>
-    <string name="clear_miui_data_summary">清除MIUI天氣提供商數據庫</string>
+    <string name="clear_miui_data_dialog_ask">清除MIUI天氣供應商資料庫中的資料?</string>
+    <string name="clear_miui_data_dialog_text">MIUI天氣提供商資料庫已清除!</string>
+    <string name="clear_miui_data_summary">清除MIUI天氣提供商資料庫</string>
     <string name="close">關閉</string>
-    <string name="conf_add_widget">添加 Widget</string>
+    <string name="conf_add_widget">添加Widget</string>
     <string name="conf_dark_skin">黑色外觀</string>
     <string name="conf_choose_skin">選擇外觀</string>
     <string name="conf_light_skin">白色外觀</string>
@@ -54,7 +57,7 @@
     <string name="donate">捐贈</string>
     <string name="donations_button_close">關閉</string>
     <string name="donations_description">"你覺得這個應用程序非常有用嗎?
-支持它的發展及感謝道奇兔的繁化，或捐款給開發者!!"</string>
+支持它的發展，或捐款給開發者!"</string>
     <string name="donations_flattr">Flattr</string>
     <string name="donations_flattr_description">Flattr的月租費為10%!</string>
     <string name="donations_google_android_market">Google Play Store</string>
@@ -73,73 +76,76 @@
     <string name="download_video">取得影像</string>
     <string name="end_time_title">結束</string>
     <string name="fetching_location">獲取您的位置…</string>
-    <string name="foreca_clear">清除</string>
+    <string name="foreca_clear">明朗</string>
     <string name="foreca_cloudy">多雲</string>
     <string name="foreca_cloudy_l_rain">小雨</string>
     <string name="foreca_cloudy_l_snow">小雪</string>
-    <string name="foreca_cloudy_l_wet_snow">Light wet snow</string>
-    <string name="foreca_cloudy_rain">下雨</string>
+    <string name="foreca_cloudy_l_wet_snow">輕濕雪</string>
+    <string name="foreca_cloudy_rain">雨</string>
     <string name="foreca_cloudy_showers">驟雨</string>
     <string name="foreca_cloudy_snow">雪</string>
     <string name="foreca_cloudy_snow_showers">陣雪</string>
-    <string name="foreca_cloudy_ts_rain">T-storms 有雨</string>
-    <string name="foreca_cloudy_ts_snow">T-storms 有雪</string>
-    <string name="foreca_cloudy_ts_wet_snow">T-storms with wet snow</string>
-    <string name="foreca_cloudy_wet_snow">Wet snow</string>
-    <string name="foreca_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_cloudy_ts_rain">大雷雨</string>
+    <string name="foreca_cloudy_ts_snow">風暴雪</string>
+    <string name="foreca_cloudy_ts_wet_snow">輕濕雪風暴</string>
+    <string name="foreca_cloudy_wet_snow">濕雪</string>
+    <string name="foreca_cloudy_wet_snow_showers">濕陣雪</string>
     <string name="foreca_mostly_clear">天色清晰</string>
     <string name="foreca_mostly_clear_pos_rain">可能下雨</string>
     <string name="foreca_mostly_clear_pos_snow">可能有雪</string>
     <string name="foreca_mostly_clear_pos_ts_rain">有雷雨的機會</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Chance of t-storms with snow</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Chance of wet snow</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">有暴雪的機會</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">有輕濕雪風暴的機會</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">有濕陣雪的機會</string>
     <string name="foreca_overcast">陰天</string>
     <string name="foreca_overcast_l_rain">細雨</string>
     <string name="foreca_overcast_l_snow">小雪</string>
-    <string name="foreca_overcast_l_wet_snow">Light wet snow</string>
+    <string name="foreca_overcast_l_wet_snow">輕濕雪</string>
     <string name="foreca_overcast_rain">下雨</string>
     <string name="foreca_overcast_showers">驟雨</string>
     <string name="foreca_overcast_snow">下雪</string>
     <string name="foreca_overcast_snow_showers">陣雪</string>
-    <string name="foreca_overcast_ts_rain">有雷雨的機會</string>
-    <string name="foreca_overcast_ts_snow">T-storms with snow</string>
-    <string name="foreca_overcast_ts_wet_snow">T-storms with wet snow</string>
-    <string name="foreca_overcast_wet_snow">Wet snow</string>
-    <string name="foreca_overcast_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_overcast_ts_rain">大雷雨</string>
+    <string name="foreca_overcast_ts_snow">風暴雪</string>
+    <string name="foreca_overcast_ts_wet_snow">輕濕雪風暴</string>
+    <string name="foreca_overcast_wet_snow">濕雪</string>
+    <string name="foreca_overcast_wet_snow_showers">濕陣雪</string>
     <string name="foreca_partly_cloudy">晴時多雲</string>
     <string name="foreca_partly_cloudy_l_rain">小雨</string>
-    <string name="foreca_partly_cloudy_l_snow">小雨</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Light wet snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">有雷雨的機會</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Chance of t-storms with snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
-    <string name="foreca_partly_cloudy_rain">下雨</string>
+    <string name="foreca_partly_cloudy_l_snow">小雪</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">輕濕雪</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">可能有大雷雨</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">可能有風暴雪</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">可能有輕濕雪風暴</string>
+    <string name="foreca_partly_cloudy_rain">雨</string>
     <string name="foreca_partly_cloudy_showers">驟雨</string>
     <string name="foreca_partly_cloudy_snow">下雪</string>
     <string name="foreca_partly_cloudy_snow_showers">陣雪</string>
-    <string name="foreca_partly_cloudy_wet_snow">Wet snow</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_partly_cloudy_wet_snow">濕雪</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">濕陣雪</string>
     <string name="changelog">變更</string>
     <string name="just_now">剛才</string>
-    <string name="loading">Loading…</string>
+    <string name="loading">等待…</string>
     <string name="location_edit">輸入城市名稱</string>
     <string name="location_gps">您現在的位置</string>
     <string name="location_list">位置</string>
     <string name="location_search">搜尋位置</string>
     <string name="main_screen_text_color_summary">主屏幕上的文字顏色</string>
     <string name="menu">選單</string>
+    <string name="menu_delete_theme">刪除主題</string>
     <string name="menu_hourly">每小時</string>
-    <string name="menu_indices">生活風格</string>
+    <string name="menu_import">從SD卡中導入主題</string>
+    <string name="menu_indices">生活型態</string>
     <string name="menu_locations">位置</string>
-    <string name="menu_moon_phases">Moon Phases</string>
+    <string name="menu_moon_phases">月亮變化</string>
     <string name="menu_settings">設置</string>
+    <string name="menu_themes">主題</string>
     <string name="menu_trend">趨勢</string>
     <string name="menu_update">更新</string>
-    <string name="moon_age">Age %s 數天</string>
+    <string name="moon_age">年 %s 數天</string>
     <string name="moon_newmoon">新月</string>
     <string name="moon_waxingcrescent">娥眉月</string>
-    <string name="moon_firstquarter">第一季</string>
+    <string name="moon_firstquarter">上弦月</string>
     <string name="moon_waxinggibbous">盈凸月</string>
     <string name="moon_full">滿月</string>
     <string name="moon_waninggibbous">虧凸月</string>
@@ -147,7 +153,7 @@
     <string name="moon_waningcrescent">殘月</string>
     <string name="moon_current_view">查看模式: %s</string>
     <string name="moon_illuminated">說明</string>
-    <string name="moon_since">Начиная с</string>
+    <string name="moon_since">自</string>
     <string name="network_error">"無法連接伺服器.
 檢查您的網絡設置."</string>
     <string name="new_version">新版本</string>
@@ -166,14 +172,14 @@
     <string name="quiet_hours_title">安靜幾小時</string>
     <string name="settings_about_summary">有關應用程序的訊息</string>
     <string name="settings_about_title">關於</string>
-    <string name="settings_animation_download_summary">下載當前天氣狀況(如果在內部空間沒有發現的影像)</string>
+    <string name="settings_animation_download_summary">下載當前天氣狀況(如果在內部空間沒有發現動畫)</string>
     <string name="settings_animation_download_title">下載動畫</string>
     <string name="settings_animation_show_summary">顯示天氣動畫和現在的情況</string>
     <string name="settings_animation_show_title">顯示動畫</string>
     <string name="settings_animation_type">動畫類型</string>
     <string name="settings_category_animation">動畫</string>
-    <string name="settings_category_animation_sum">Animation type,下載 policy</string>
-    <string name="settings_category_app_update">應用程序更新</string>
+    <string name="settings_category_animation_sum">動畫類型</string>
+    <string name="settings_category_app_update">應用程式更新</string>
     <string name="settings_category_appearance">常見的</string>
     <string name="settings_category_appearance_sum">測量單位, 文字顏色等.</string>
     <string name="settings_category_forecast_update">預測更新</string>
@@ -186,6 +192,7 @@
     <string name="settings_category_update_sum">設置自動更新和自動更新時間</string>
     <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Widgets的外觀和點擊動作</string>
+    <string name="settings_citydb_provider">城市提供商</string>
     <string name="settings_click_actions">單擊動作</string>
     <string name="settings_check_updates_summary">在應用程序啟動檢查更新</string>
     <string name="settings_check_updates_title">檢查更新</string>
@@ -210,19 +217,19 @@
     <string name="settings_update_autoupdate_title">自動更新</string>
     <string name="settings_update_interval_title">更新間隔</string>
     <string name="settings_update_roaming_summary">即使在漫遊時自動更新天氣預報。注意，您的手機帳單會有一個額外的費用。</string>
-    <string name="settings_update_roaming_title">漫遊中更新</string>
+    <string name="settings_update_roaming_title">漫遊狀態下更新</string>
     <string name="settings_update_wake_title">喚醒設備</string>
     <string name="settings_update_wifi_only_summary">建立Wi-Fi連接時自動更新天氣預報</string>
     <string name="settings_update_wifi_only_title">僅在Wi-Fi下更新</string>
     <string name="settings_weather_provider">天氣提供商</string>
     <string name="settings_widgets_click_clock_summary">點擊widgets時啟動時鐘app</string>
     <string name="settings_widgets_click_clock_title">點擊時鐘</string>
-    <string name="settings_widgets_click_date_summary">點擊widgets時啟動日期app </string>
+    <string name="settings_widgets_click_date_summary">點擊widgets時啟動日期app</string>
     <string name="settings_widgets_click_date_title">點擊日期</string>
     <string name="settings_widgets_click_weather_summary">widgets啟動app時按一下預測面積(溫度)</string>
     <string name="settings_widgets_click_weather_title">點擊預測</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
-    <string name="settings_widgets_widget4x1_data_title">Extended data</string>
+    <string name="settings_widgets_widget4x1_data_title">額外資料</string>
     <string name="settings_widgets_widget4x1_transparent_sum">未選中默認背景</string>
     <string name="settings_widgets_widget4x1_transparent_title">透明背景</string>
     <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
@@ -231,7 +238,7 @@
     <string name="settings_widgets_widget4x2_city_font_title">城市</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">預設值 50sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">時鐘</string>
-    <string name="settings_widgets_widget4x2_custom_font_summary">自定義字體大小 for widget</string>
+    <string name="settings_widgets_widget4x2_custom_font_summary">自定義widget字體大小 </string>
     <string name="settings_widgets_widget4x2_custom_font_title">自定義字體大小</string>
     <string name="settings_widgets_widget4x2_date_font_summary">預設值 14sp</string>
     <string name="settings_widgets_widget4x2_date_font_title">日</string>
@@ -244,7 +251,7 @@
     <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">預設值 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">風</string>
-    <string name="share">Share</string>
+    <string name="share">分享</string>
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# 今天 %1$s 的天氣是 %2$s, %3$s, %4$s. 更新 %5$s."</string>
     <string name="share_weather_title">分享天氣數據</string>
@@ -254,11 +261,20 @@
     <string name="temperature_units_c">攝氏</string>
     <string name="temperature_units_f">華氏</string>
     <string name="text_color_title">文字顏色</string>
+    <string name="theme_author">"作者: "</string>
+    <string name="theme_date">"日期: "</string>
+    <string name="theme_import_dialog_title">選擇一個主題導入</string>
+    <string name="theme_import_no_filemanager">請安裝一個文件管理器.</string>
+    <string name="theme_import_not_theme">這不是一個主題檔案!</string>
+    <string name="theme_version">"版本: "</string>
+    <string name="themes_temperature_icons">溫度圖標</string>
+    <string name="themes_weather_animation">天氣動畫</string>
+    <string name="themes_weather_icons">天氣圖標</string>
     <string name="updating">更新…</string>
     <string name="upgrade">升級</string>
     <string name="visibility_units">能見度單位</string>
-    <string name="visibility_units_km">"公里"</string>
-    <string name="visibility_units_m">"米"</string>
+    <string name="visibility_units_km">" 公里"</string>
+    <string name="visibility_units_m">" 米"</string>
     <string name="visibility_units_mi">" 英里"</string>
     <string name="weather_cond_cloudy">多雲</string>
     <string name="weather_cond_fog">霧</string>
@@ -287,7 +303,7 @@
     <string name="widget_name_medium">(4x1)Weather BZ</string>
     <string name="widget_name_medium_ext">(4x1 ext)Weather BZ</string>
     <string name="widget_name_medium_v5">(4x1 v5)Weather BZ</string>
-    <string name="widget_text_color_summary">"widget's的文字顏色"</string>
+    <string name="widget_text_color_summary">"Widget的文字顏色"</string>
     <string name="wind_e">E</string>
     <string name="wind_ene">E-NE</string>
     <string name="wind_ese">E-SE</string>
@@ -299,9 +315,9 @@
     <string name="wind_s">S</string>
     <string name="wind_se">SE</string>
     <string name="wind_speed_units">風速單位</string>
-    <string name="wind_speed_units_kmph">"公里/小時"</string>
-    <string name="wind_speed_units_mph">"英里"</string>
-    <string name="wind_speed_units_mps">"米/秒"</string>
+    <string name="wind_speed_units_kmph">" 公里/小時"</string>
+    <string name="wind_speed_units_mph">" 英里"</string>
+    <string name="wind_speed_units_mps">" 米/秒"</string>
     <string name="wind_sse">S-SE</string>
     <string name="wind_ssw">S-SW</string>
     <string name="wind_sw">SW</string>
@@ -311,8 +327,8 @@
     <string name="wind_wsw">W-SW</string>
     <string name="zodiac_aries">牡羊座</string>
     <string name="zodiac_taurus">金牛座</string>
-    <string name="zodiac_gemini">Gemini</string>
-    <string name="zodiac_cancer">雙子座</string>
+    <string name="zodiac_gemini">雙子座</string>
+    <string name="zodiac_cancer">巨蟹座</string>
     <string name="zodiac_leo">獅子座</string>
     <string name="zodiac_virgo">處女座</string>
     <string name="zodiac_libra">天秤座</string>
